# alpenglowed

./: .gitignore  Cargo.toml  README.md  build.rs  ci.sh
.cargo/: config.toml
.github/workflows/: ci.yml
alpenglow-greeter/: Cargo.toml  README.md
alpenglow-greeter/src/: main.rs
docs/superpowers/plans/: 2026-06-28-e2e-desktop-greeter.md  2026-07-02-appliance-desktop-distro-roadmap.md
docs/superpowers/specs/: 2026-06-28-e2e-desktop-greeter-design.md  2026-07-02-appliance-desktop-distro-design.md  2026-07-02-phase0-findings.md
plugins/spotify/: plugin.json  spotify.js
plugins/spotify-rust/: Cargo.toml  plugin.json
plugins/spotify-rust/src/: main.rs
polybar/: config.ini  launch.sh
scripts/: build-aarch64.sh  build-greeter-glibc-docker.sh  build-x86_64.sh  cross-build-libxkbcommon.sh  qemu-test-aarch64.sh  qemu-test.sh
src/: compositor.rs  config.rs  de.rs  layout.rs  main.rs  notifications.rs  pills.rs  plugin.rs  runner.rs  session.rs  terminal.rs
src/views/: panes.crepus  shell.crepus  workspace.crepus
