[package]
name = "alpenglowed"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
crepuscularity-gpui = { path = "../crepuscularity/crates/crepuscularity-gpui", features = ["wayland"] }
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wayland-client = "0.31.14"

[build-dependencies]
crepuscularity-gpui = { path = "../crepuscularity/crates/crepuscularity-gpui", features = ["wayland"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
