[package]
name = "alpenglowed"
version = "0.1.0"
edition = "2021"
publish = false

[features]
compositor = ["smithay"]

[dependencies]
crepuscularity-core = { path = "../crepuscularity/crates/crepuscularity-core" }
crepuscularity-gpui = { path = "../crepuscularity/crates/crepuscularity-gpui", features = ["wayland"] }
crepuscularity-web = { path = "../crepuscularity/crates/crepuscularity-web" }
fuzzy-matcher = "0.3"
smithay = { version = "0.7", default-features = false, features = ["wayland_frontend", "desktop"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wayland-client = "0.31.14"

[build-dependencies]
crepuscularity-gpui = { path = "../crepuscularity/crates/crepuscularity-gpui", features = ["wayland"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
